修复了后缀表达式转中缀表达式后无法显示大于十数字的BUG

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,14 @@
                 android:horizontalSpacing="10dp"
                 android:numColumns="4"
                 android:scaleType="centerInside" />
+
+            <TextView
+                android:id="@+id/empty_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="请先选择卡牌"
+                android:textSize="30sp" />
         </LinearLayout>
 
         <LinearLayout
