--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,29 +12,34 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="100"
             android:text="请点击选择卡牌"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            android:layout_marginTop="20dp"/>
 
         <GridView
             android:id="@+id/poker_grid"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
             android:horizontalSpacing="10dp"
             android:numColumns="4"
-            android:scaleType="centerInside"
-            android:verticalSpacing="-90dp" />
+            android:verticalSpacing="-100dp"
+            android:layout_marginTop="20dp"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="已选择卡牌"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            android:layout_marginTop="20dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp">
 
             <GridView
                 android:id="@+id/selected_poker_list"
@@ -57,7 +62,8 @@
             android:id="@+id/button_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp">
 
             <Button
                 android:id="@+id/clear_button"
