--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,35 +11,43 @@
         tools:context=".MainActivity">
 
         <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/app_name"
+            android:textSize="40dp" />
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginTop="20dp"
             android:layout_weight="100"
             android:text="请点击选择卡牌"
-            android:textSize="30sp"
-            android:layout_marginTop="20dp"/>
+            android:textSize="30sp" />
 
         <GridView
             android:id="@+id/poker_grid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:gravity="center"
             android:horizontalSpacing="10dp"
             android:numColumns="4"
-            android:verticalSpacing="-100dp"
-            android:layout_marginTop="20dp"/>
+            android:verticalSpacing="-100dp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:text="已选择卡牌"
-            android:textSize="30sp"
-            android:layout_marginTop="20dp"/>
+            android:textSize="30sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
 
             <GridView
                 android:id="@+id/selected_poker_list"
@@ -62,8 +70,8 @@
             android:id="@+id/button_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/clear_button"
